--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -2,4 +2,9 @@
   padding: 32px 16px;
   border-top: 1px solid #e0e0e0;
   text-align: center;
+  font-size: 16px;
+
+  i {
+    font-size: 14px;
+  }
 }
